Create Player function completed: - Create Player - Add Player into array todo: - Clone template and add player to list

--- a/css/style.css
+++ b/css/style.css
@@ -219,10 +219,26 @@ td { vertical-align: top; }
    ========================================================================== */
 
 
+body {
+  background:url(../images/project_papper.png) repeat;
+}
+
+header {
+
+}
+
+#main {
+
+}
+
+.template {
+  display:none;
+}
 
 
+footer {
 
-
+}
 
 
 
