Major Changes: localStorage - now storing whole array rather than individual data todo: removePlayer button

--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,55 @@ header {
 
 }
 
+#player-list {
+  width:200px;
+}
+
+#player-list p {
+  display:inline-block;
+  margin:0;
+  color:#fff;
+}
+
+#player-list li {
+  list-style:none;
+  margin:10px 0;
+  background:#FF6600;
+  padding:5px 0px 5px 10px;
+  border-radius:7px;
+}
+
+.list-item-name {
+  padding: 5px 0 0;
+}
+
+a.manager-link {
+  text-decoration:none;
+  background:#333;
+  height:20px;
+  width:20px;
+  border-radius:20px;
+  border:2px solid #fff;
+  color:#fff;
+  text-align:center;
+  display:block;
+  box-shadow:0px 2px 2px rgba(0,0,0,0.5);
+  margin:0 10px;
+  line-height:18px;
+}
+
+.add {
+  float:right;
+}
+
+.remove-container {
+  float:right;
+}
+
+.remove {
+
+}
+
 .template {
   display:none;
 }
