--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,17 @@ td { vertical-align: top; }
    Author:
    ========================================================================== */
 
+@font-face {
+    font-family: 'SansitaOneRegular';
+    src: url('../fonts/SansitaOne-webfont.eot');
+    src: url('../fonts/SansitaOne-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/SansitaOne-webfont.woff') format('woff'),
+         url('../fonts/SansitaOne-webfont.ttf') format('truetype'),
+         url('../fonts/SansitaOne-webfont.svg#SansitaOneRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 body {
   background:url(../images/project_papper.png) repeat;
@@ -232,7 +243,20 @@ header {
 }
 
 #player-list {
-  width:200px;
+  width:250px;
+  background:url(../images/leather.png) #333;
+  padding:20px;
+  border-radius:7px;
+  margin:10px;
+  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);      
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);
+}
+
+#player-list h2 {
+  margin:10px 0;
+  color:#FF6600;
+  font-family:SansitaOneRegular;
+  font-weight:normal;
 }
 
 #player-list p {
@@ -244,18 +268,39 @@ header {
 #player-list li {
   list-style:none;
   margin:10px 0;
-  background:#FF6600;
+  background:url(../images/names.png) #FF6600;
+  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);      
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);
   padding:5px 0px 5px 10px;
   border-radius:7px;
 }
 
+#player-form {
+  border-radius:7px;
+  background:#333;
+  padding:10px;
+  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);      
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+#player-form input {
+  border-radius:7px;
+  border:1px solid #FF6600;
+  padding:5px;
+  width:160px;
+}
+
+#player-form .submit {
+  width:50px;
+}
+
 .list-item-name {
-  padding: 5px 0 0;
+  padding: 4px 0 0;
 }
 
 a.manager-link {
   text-decoration:none;
-  background:#333;
+  background:url(../images/leather.png) #333;
   height:20px;
   width:20px;
   border-radius:20px;
@@ -263,7 +308,8 @@ a.manager-link {
   color:#fff;
   text-align:center;
   display:block;
-  box-shadow:0px 2px 2px rgba(0,0,0,0.5);
+  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);      
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);
   margin:0 10px;
   line-height:18px;
 }
