--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,31 @@ header {
 }
 
 #main {
+  position:relative;
+}
 
+.left {
+
+}
+#list-control {
+  background:url(../images/leather.png) #333;
+  -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
+  box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
+  border-radius:40px;
+  width:40px;
+  height:40px;
+  position:absolute;
+  z-index:999;
+  top:10px;
+  left:10px;
+}
+
+a.list-toggle {
+  text-decoration: none;
+  color:#F60;
+  background:url(../images/list-icon.jpg) no-repeat center center;
+  width:100%;
+  height:100%;
 }
 
 #player-list {
@@ -247,9 +271,12 @@ header {
   background:url(../images/leather.png) #333;
   padding:20px;
   border-radius:7px;
-  margin:10px;
-  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);      
-  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);
+  margin:0;
+  -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
+  box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
+  position:absolute;
+  top:10px;
+  left:60px;
 }
 
 #player-list h2 {
@@ -257,6 +284,11 @@ header {
   color:#FF6600;
   font-family:SansitaOneRegular;
   font-weight:normal;
+  text-shadow: 0 2px 2px #000000;
+}
+
+#player-list .top h2 {
+  float:left;
 }
 
 #player-list p {
@@ -277,21 +309,25 @@ header {
 
 #player-form {
   border-radius:7px;
-  background:#333;
+  background:#01B9B5;
   padding:10px;
   -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);      
   box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);
+  display:none;
 }
 
 #player-form input {
   border-radius:7px;
-  border:1px solid #FF6600;
   padding:5px;
   width:160px;
+  color:#666;
+  border:none;
+
 }
 
 #player-form .submit {
   width:50px;
+  color:#333;
 }
 
 .list-item-name {
@@ -300,7 +336,6 @@ header {
 
 a.manager-link {
   text-decoration:none;
-  background:url(../images/leather.png) #333;
   height:20px;
   width:20px;
   border-radius:20px;
@@ -311,18 +346,39 @@ a.manager-link {
   -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);      
   box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.5);
   margin:0 10px;
-  line-height:18px;
 }
 
-.add {
-  float:right;
+a.manager-link:hover {
+
+}
+
+a.add {
+  float: right;
+  font-size: 120%;
+  font-weight: bold;
+  line-height: 15px;
+  margin: 10px;
+  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 1);          
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 1);
+  padding:2px;
+}
+
+a.neg {
+  background:url(../images/plus-minus.jpg) no-repeat center -24px;
+}
+
+a.pos {
+  background:url(../images/plus-minus.jpg) no-repeat center 0px;
 }
 
 .remove-container {
   float:right;
 }
 
-.remove {
+a.remove {
+  font-size: 200%;
+  line-height: 16pt;
+  background:url(../images/plus-minus.jpg) no-repeat center -26px;
 
 }
 
