--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ a.list-toggle {
   height:100%;
 }
 
-#player-list {
+#player-list-container {
   width:250px;
   background:url(../images/leather.png) #333;
   padding:20px;
@@ -278,6 +278,11 @@ a.list-toggle {
   top:10px;
   left:60px;
   display:none;
+}
+
+#player-list {
+  margin:0;
+  padding:0;
 }
 
 #player-list h2 {
@@ -306,6 +311,29 @@ a.list-toggle {
   box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);
   padding:5px 0px 5px 10px;
   border-radius:7px;
+}
+
+#player-list-container .clear-all, #player-list-container .clear-confirm {
+  margin:10px 0;
+  background:url(../images/leather-red.jpg) repeat;
+  -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);      
+  box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);
+  padding:9px 0px 9px 10px;
+  border-radius:7px;
+  display:block;
+  text-decoration:none;
+  color:#fff;
+}
+
+#player-list-container .clear-confirm .cancel, #player-list-container .clear-confirm .clear {
+  display: inline-block;
+  background: url(../images/leather.png) repeat;
+  border-radius: 5px;
+  border: 2px solid #fff;
+  width: 40px;
+  text-align: center;
+  float: right;
+  margin: -2px 10px 0 0;
 }
 
 #player-form {
