--- a/css/style.css
+++ b/css/style.css
@@ -312,7 +312,7 @@ a.config {
   box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
 }
 
-.player-list-container {
+.player-list-container, .config-container {
   display:none;
 }
 
@@ -332,7 +332,7 @@ a.config {
   text-shadow: 0 2px 2px #000000;
 }
 
-#player-list .top h2 {
+.top h2 {
   float:left;
 }
 
