--- a/css/style.css
+++ b/css/style.css
@@ -551,6 +551,29 @@ a.switch {
 
 }
 
+#brackets .round-template {
+
+}
+
+#brackets .match-template {
+  background:url(../images/leather.png) repeat;
+  color:#ccc;
+  padding:10px 15px;
+  border-radius:7px;
+  -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
+  box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
+}
+
+#brackets ul {
+  margin:0;
+  padding:0;
+  text-align: center;
+}
+
+#brackets li {
+  list-style:none;
+}
+
 .template {
   display:none;
 }
