--- a/css/style.css
+++ b/css/style.css
@@ -551,17 +551,18 @@ a.switch {
 
 }
 
-#brackets .round-template {
+#brackets .tourn-round {
 
 }
 
-#brackets .match-template {
+#brackets .match {
   background:url(../images/leather.png) repeat;
   color:#ccc;
   padding:10px 15px;
   border-radius:7px;
   -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
   box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
+  margin:10px;
 }
 
 #brackets ul {
