--- a/css/style.css
+++ b/css/style.css
@@ -261,16 +261,11 @@ header {
 }
 
 #main .settings-toggle {
-  background:url(../images/leather.png) #333;
-  -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
-  box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
-  border-radius:0 0 20px 0;
-  margin:0;
+  margin:20px 0;
   position:absolute;
   top:0;
   left:0;
   z-index:102;
-  padding:10px 20px 5px 15px;
 }
 
 #main .settings-toggle a {
@@ -282,6 +277,16 @@ header {
   font-family: SansitaOneRegular;
   font-weight: normal;
   text-shadow: 0 2px 2px rgba(0,0,0,0.5);
+  background: #222;
+  -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
+  box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
+  padding:10px 20px 10px 15px;
+  margin:0;
+  display:inline;
+}
+
+.settings-close {
+
 }
 
 a.list-toggle {
@@ -325,6 +330,10 @@ a.config-toggle {
 #option-panels li {
   list-style:none;
   padding:10px 20px;
+}
+
+#option-panels li.player-list-container {
+  padding:75px 20px 10px;
 }
 
 #option-panels li li {
@@ -400,7 +409,6 @@ a.config-toggle {
   padding:10px;
   -webkit-box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);      
   box-shadow:  0px 2px 2px rgba(0, 0, 0, 0.2);
-  display:none;
 }
 
 #player-form input {
@@ -528,6 +536,9 @@ a.switch {
 
 #new-tournament {
   color:#ccc;
+  background:#222;
+  padding:10px 10px 15px;
+  border-radius:7px;
 }
 
 #new-tournament .confirm {
@@ -545,8 +556,14 @@ a.switch {
   background:#ddd;
 }
 
-#brackets {
+#tournament-heads {
+  margin:60px 0 0;
+  width:300px;
+  float:left;
+}
 
+#brackets {
+  float:left;
 }
 
 #brackets hgroup {
