--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,7 @@ header {
 }
 
 .left {
+  position:relative;
 }
 
 .right {
@@ -262,7 +263,7 @@ header {
 
 #main .settings-toggle {
   margin:20px 0;
-  position:absolute;
+  position:fixed;
   top:0;
   left:0;
   z-index:102;
@@ -563,7 +564,10 @@ a.switch {
 }
 
 #brackets {
-  float:left;
+  position:absolute;
+  top:0;
+  left:310px;
+  width:0px;
 }
 
 #brackets hgroup {
@@ -579,7 +583,8 @@ a.switch {
 }
 
 #brackets .tourn-round {
-
+  float:left;
+  text-align:center;
 }
 
 #brackets .match {
@@ -590,6 +595,7 @@ a.switch {
   -webkit-box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);      
   box-shadow:  0px 5px 5px 2px rgba(0, 0, 0, 0.5);
   margin:10px;
+  width:180px;
 }
 
 #brackets ul {
